--- a/ceph.spec.in
+++ b/ceph.spec.in
@@ -18,12 +18,12 @@
 %{!?_selinux_policy_version: %global _selinux_policy_version %(sed -e 's,.*selinux-policy-\\([^/]*\\)/.*,\\1,' /usr/share/selinux/devel/policyhelp 2>/dev/null || echo 0.0.0)}
 
 %define relabel_files() \
-restorecon -R /usr/bin/ceph-mon > /dev/null 2>&1; \
-restorecon -R /usr/bin/ceph-osd > /dev/null 2>&1; \
-restorecon -R /usr/bin/ceph-mds > /dev/null 2>&1; \
-restorecon -R /usr/bin/radosgw > /dev/null 2>&1; \
-restorecon -R /etc/rc\.d/init\.d/ceph > /dev/null 2>&1; \
-restorecon -R /etc/rc\.d/init\.d/radosgw > /dev/null 2>&1; \
+restorecon -R %{_bindir}/ceph-mon > /dev/null 2>&1; \
+restorecon -R %{_bindir}/ceph-osd > /dev/null 2>&1; \
+restorecon -R %{_bindir}/ceph-mds > /dev/null 2>&1; \
+restorecon -R %{_bindir}/radosgw > /dev/null 2>&1; \
+restorecon -R %{_initrddir}/ceph > /dev/null 2>&1; \
+restorecon -R %{_initrddir}/radosgw > /dev/null 2>&1; \
 restorecon -R /var/run/ceph > /dev/null 2>&1; \
 restorecon -R /var/lib/ceph > /dev/null 2>&1; \
 restorecon -R /var/log/ceph > /dev/null 2>&1;
@@ -632,8 +632,8 @@ if [ $1 = 0 ] ; then
   SERVICE_LIST=$(systemctl | grep -E '^ceph-mon@|^ceph-create-keys@|^ceph-osd@|^ceph-mds@|^ceph-disk-'  | cut -d' ' -f1)
   if [ -n "$SERVICE_LIST" ]; then
     for SERVICE in $SERVICE_LIST; do
-      /usr/bin/systemctl --no-reload disable $SERVICE > /dev/null 2>&1 || :
-      /usr/bin/systemctl stop $SERVICE > /dev/null 2>&1 || :
+      %{_bindir}/systemctl --no-reload disable $SERVICE > /dev/null 2>&1 || :
+      %{_bindir}/systemctl stop $SERVICE > /dev/null 2>&1 || :
     done
   fi
 fi
@@ -650,7 +650,7 @@ if [ $1 = 1 ] ; then
     SERVICE_LIST=$(systemctl | grep -E '^ceph-mon@|^ceph-create-keys@|^ceph-osd@|^ceph-mds@|^ceph-disk-'  | cut -d' ' -f1)
     if [ -n "$SERVICE_LIST" ]; then
       for SERVICE in $SERVICE_LIST; do
-        /usr/bin/systemctl try-restart $SERVICE > /dev/null 2>&1 || :
+        %{_bindir}/systemctl try-restart $SERVICE > /dev/null 2>&1 || :
       done
     fi
   fi
@@ -860,7 +860,7 @@ fi
   # explicit systemctl daemon-reload (that's the only relevant bit of
   # service_add_post; the rest is all sysvinit --> systemd migration which
   # isn't applicable in this context (see above comment).
-  /usr/bin/systemctl daemon-reload >/dev/null 2>&1 || :
+  %{_bindir}/systemctl daemon-reload >/dev/null 2>&1 || :
 %endif
 
 %preun radosgw
@@ -869,8 +869,8 @@ if [ $1 = 0 ] ; then
   SERVICE_LIST=$(systemctl | grep -E '^ceph-radosgw@'  | cut -d' ' -f1)
   if [ -n "$SERVICE_LIST" ]; then
     for SERVICE in $SERVICE_LIST; do
-      /usr/bin/systemctl --no-reload disable $SERVICE > /dev/null 2>&1 || :
-      /usr/bin/systemctl stop $SERVICE > /dev/null 2>&1 || :
+      %{_bindir}/systemctl --no-reload disable $SERVICE > /dev/null 2>&1 || :
+      %{_bindir}/systemctl stop $SERVICE > /dev/null 2>&1 || :
     done
   fi
 fi
@@ -887,7 +887,7 @@ if [ $1 = 1 ] ; then
     SERVICE_LIST=$(systemctl | grep -E '^ceph-radosgw@'  | cut -d' ' -f1)
     if [ -n "$SERVICE_LIST" ]; then
       for SERVICE in $SERVICE_LIST; do
-        /usr/bin/systemctl try-restart $SERVICE > /dev/null 2>&1 || :
+        %{_bindir}/systemctl try-restart $SERVICE > /dev/null 2>&1 || :
       done
     fi
   fi
@@ -1078,12 +1078,12 @@ if test "$OLD_POLVER" == "$NEW_POLVER"; then
 fi
 
 # Check whether the daemons are running
-/usr/bin/systemctl status ceph.target > /dev/null 2>&1
+%{_bindir}/systemctl status ceph.target > /dev/null 2>&1
 STATUS=$?
 
 # Stop the daemons if they were running
 if test $STATUS -eq 0; then
-/usr/bin/systemctl stop ceph.target > /dev/null 2>&1
+%{_bindir}/systemctl stop ceph.target > /dev/null 2>&1
 fi
 
 # Now, relabel the files
@@ -1091,7 +1091,7 @@ fi
 
 # Start the daemons iff they were running before
 if test $STATUS -eq 0; then
-/usr/bin/systemctl start ceph.target > /dev/null 2>&1 || :
+%{_bindir}/systemctl start ceph.target > /dev/null 2>&1 || :
 fi
 
 exit 0
@@ -1110,12 +1110,12 @@ if [ $1 -eq 0 ]; then
     fi
 
     # Check whether the daemons are running
-    /usr/bin/systemctl status ceph.target > /dev/null 2>&1
+    %{_bindir}/systemctl status ceph.target > /dev/null 2>&1
     STATUS=$?
 
     # Stop the daemons if they were running
     if test $STATUS -eq 0; then
-    /usr/bin/systemctl stop ceph.target > /dev/null 2>&1
+    %{_bindir}/systemctl stop ceph.target > /dev/null 2>&1
     fi
 
     # Now, relabel the files
@@ -1123,7 +1123,7 @@ if [ $1 -eq 0 ]; then
 
     # Start the daemons if they were running before
     if test $STATUS -eq 0; then
-    /usr/bin/systemctl start ceph.target > /dev/null 2>&1 || :
+    %{_bindir}/systemctl start ceph.target > /dev/null 2>&1 || :
     fi
 fi
 exit 0
